--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
       <div class="counter" id="lightbox-counter"></div>
     </div>
 
-    <script src="js/my-info.js"></script>
-    <script src="js/portfolio.js"></script>
-    <script src="js/resume.js"></script>
-    <script src="js/courses.js"></script>
+    <script src="my-info.js"></script>
+    <script src="portfolio.js"></script>
+    <script src="resume.js"></script>
+    <script src="courses.js"></script>
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
